--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,9 @@ tifffile
 typing_extensions
 urllib3
 
+pyrr
+simplejson
+
 ## If running into dependency issues, install the version-specific requirements below in a virtual environment
 # albumentations==1.2.1
 # boto3==1.24.58
@@ -50,6 +53,7 @@ urllib3
 # Pillow==9.2.0
 # protobuf==3.20.1
 # pyparsing==3.0.9
+# pyrr==0.10.3
 # python-dateutil==2.8.2
 # PyWavelets==1.3.0
 # PyYAML==6.0
@@ -59,6 +63,7 @@ urllib3
 # scikit-image==0.19.3
 # scikit-learn==1.1.2
 # scipy==1.9.0
+# simplejson==3.17.6
 # six==1.16.0
 # tensorboardX==2.5.1
 # threadpoolctl==3.1.0
